# hrrrsmoke-forecast

./: .gitattributes  .gitignore  README.md  pyproject.toml  run_full_pipeline.sh
config/: pipeline_config.yaml
docs/: AGENT_HANDOFF_VIIRS_NEXT_OVERPASS.md
output/jupyter-notebook/: training.ipynb  wildfire-viirs-eda.ipynb
scripts/: animate_goes_vs_viirs.py  animate_goes_vs_viirs_rgb.py  build_wfigs_viirs_cloud_sample_csv.py  globfire_2021_addon_analysis.py  hrrr_access_benchmark.py  hrrr_smoke_animation.py  ipynb_clean_filter.py  mtbs_wfigs_anyconf_frp_addon.py  mtbs_wfigs_coherence_analysis.py  plot_wfigs_viirs_continuous_size.py  setup_notebook_git_filter.sh  viirs_drop_rebound_viirs_clouds.py  viirs_endstage_cumulative_vs_recent.py  viirs_smoothing_baseline_demo.py  wfigs_mtbs_globfire_custom_rules_analysis.py  wfigs_viirs_drop_rebound_deep_dive.py  wfigs_viirs_missing_causes_sample.py  wfigs_viirs_stats.py
src/gribcheck/: __init__.py  cli.py  config.py  date_utils.py  fire.py  geo_utils.py  hrrr.py  io_utils.py  metrics.py  models.py  viirs.py
src/gribcheck/pipelines/: __init__.py  accuracy.py  pm_ingest.py  station_daily.py  wildfire_raster.py
tests/: test_accuracy_partial.py  test_dates.py  test_fire_rules.py  test_integration_small.py  test_pm_dedupe.py  test_station_resume.py  test_station_time.py  test_wildfire_daily.py  test_wildfire_resume.py
